app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
      - name: demo-app
        image: python:3.9-slim
        command: ["/bin/sh", "-c"]
        args: ["pip install flask pymysql cryptography && python /app/app.py"]
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: /app
          name: app-code
      volumes:
      - name: app-code
        configMap:
          name: demo-app-code
