app-traefik-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-new-traefik
  namespace: worker-cluster-wxgnf-hhk77
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-new-traefik
  template:
    metadata:
      labels:
        app: app-new-traefik
    spec:
      containers:
      - name: app-new-traefik
        image: python:3.9-slim
        command: ["/bin/sh", "-c"]
        args: ["pip install flask pymysql cryptography && python /app/app.py"]
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: /app
          name: app-code
      volumes:
      - name: app-code
        configMap:
          name: app-new-traefik-code
