app-traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-new-traefik
  namespace: worker-cluster-wxgnf-hhk77
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
spec:
  selector:
    app: app-new-traefik
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
