app-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-new-traefik-ingress
  namespace: worker-cluster-wxgnf-hhk77
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: app-new-traefik.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-new-traefik
            port:
              number: 80
